ADD [idempotent producer and consumer for OrderCreatedEvent]